updated manual and guide

--- a/core.sty
+++ b/core.sty
@@ -546,8 +546,8 @@
 \def\iconArrowsX{\faExpandArrows*}
 \def\iconArrowsV{\faArrowsAltV}
 \def\iconArrowsH{\faArrowsAltH}
-\def\iconArrowsS{\rot\faArrowsAltV}
-\def\iconArrowsB{\rot\faArrowsAltH}
+\def\iconArrowsS{\rot\faArrowsAltH}
+\def\iconArrowsB{\rot\faArrowsAltV}
 
 % Arrow
 \def\iconArrowNW{\rot\faArrowUp}
