--- a/def.tex
+++ b/def.tex
@@ -26,5 +26,5 @@
 	backgroundcolor=\color{lightgray!50},
 }
 
-\newcommand{\iconls}[2]{\lower\iconLower\hbox{\csname #1\endcsname}&\textbackslash#1&#2}
-\newcommand{\iconsc}[1]{\lower\iconLower\hbox{\csname #1\endcsname}&\textbackslash#1}
+\newcommand{\iconls}[2]{\lower\iconLower\hbox{\csname #1\endcsname}\hspace*{-0.5em}&\textbackslash#1&#2}
+\newcommand{\iconsc}[1]{\lower\iconLower\hbox{\csname #1\endcsname}\hspace*{-0.7em}&{\small \textbackslash#1}}
