--- a/part0.tex
+++ b/part0.tex
@@ -131,13 +131,13 @@ Maximum recommended ToC depth.
 
 \room{2}{Second Room}
 
-\dimensions{40}{50}{10}\\
+\dimensions{40}{50}[10]\\
 \lipsum[66]
 
 \begin{lstlisting}
 \room{2}{Second Room}
 
-\dimensions{40}{50}{10}\\
+\dimensions{40}{50}[10]\\
 \end{lstlisting}
 
 \room[\subsubsection]{2a}{Sub-Room}
@@ -148,7 +148,7 @@ Maximum recommended ToC depth.
 \begin{lstlisting}
 \room[\subsubsection]{2a}{Sub-Room}
 
-\dimensions[~squares]{3}{2}{}\\
+\dimensions[~squares]{3}{2}\\
 \end{lstlisting}
 
 \end{document}
