--- a/part_a.tex
+++ b/part_a.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\cleartoleftpage
+%\cleartoleftpage
 \addtocontents{toc}{\protect\newcolumn}% start appendixes' toc from the second column
 
 \chapterx{Appendix A: Appendix Name}
