updated manual, guide, and readme for the 2024-04-20 release

--- a/part1.tex
+++ b/part1.tex
@@ -716,6 +716,17 @@ Print an icon at the start of the title line.
 \customref{sec:links}{A link to Links section}
 \end{lstlisting}
 
+
+\subsubsection{Roomref}
+
+See \roomref{1. First Room} and \roomref{2a. Sub-Room}.
+
+\begin{lstlisting}
+See \roomref{1. First Room} and
+	\roomref{2a. Sub-Room}.
+\end{lstlisting}
+
+
 \subsubsection{Fullref}
 
 \fullref{sec:links}
@@ -723,6 +734,7 @@ Print an icon at the start of the title line.
 \begin{lstlisting}
 \fullref{sec:links}
 \end{lstlisting}
+
 
 \subsubsection{Safenameref}
 
@@ -733,6 +745,7 @@ If the label is undefined, fallback is used.
 \begin{lstlisting}
 \safenameref{sec:links}{Links section} and \safenameref{sec:other}{some other section}.
 \end{lstlisting}
+
 
 \subsubsection{Safepageref}
 
