--- a/part1.tex
+++ b/part1.tex
@@ -675,6 +675,11 @@ Print an icon at the start of the title line.
 	\iconsc{iconArrowE}		& \iconsc{iconArrowW}	\\
 	\iconsc{iconArrowSE}	& \iconsc{iconArrowNW}	\\
 \hline
+	\iconsc{iconLongArrowN}		& \iconsc{iconLongArrowS}	\\
+	\iconsc{iconLongArrowNE}	& \iconsc{iconLongArrowSW}	\\
+	\iconsc{iconLongArrowE}		& \iconsc{iconLongArrowW}	\\
+	\iconsc{iconLongArrowSE}	& \iconsc{iconLongArrowNW}	\\
+\hline
 	\iconsc{iconArrowCircleN}	& \iconsc{iconArrowCircleS}		\\
 	\iconsc{iconArrowCircleNE}	& \iconsc{iconArrowCircleSW}	\\
 	\iconsc{iconArrowCircleE}	& \iconsc{iconArrowCircleW}		\\
@@ -694,6 +699,11 @@ Print an icon at the start of the title line.
 	\iconsc{iconChevronCircleNE}	& \iconsc{iconChevronCircleSW}	\\
 	\iconsc{iconChevronCircleE}		& \iconsc{iconChevronCircleW}	\\
 	\iconsc{iconChevronCircleSE}	& \iconsc{iconChevronCircleNW}	\\
+\hline
+	\iconsc{iconTriangleN}	& \iconsc{iconTriangleS}	\\
+	\iconsc{iconTriangleNE}	& \iconsc{iconTriangleSW}	\\
+	\iconsc{iconTriangleE}	& \iconsc{iconTriangleW}	\\
+	\iconsc{iconTriangleSE}	& \iconsc{iconTriangleNW}	\\
 \hline
 	\iconsc{iconLevelUp}	& \iconsc{iconLevelDown}	\\
 \end{dtable}
