LICENSE changed to LPPL

--- a/def.tex
+++ b/def.tex
@@ -1,10 +1,12 @@
 \def \game {Into the Dungeon: Revived}	% GAME variable
 \def \title {ItDR Core Guide}	% TITLE variable
+\def \corefiles {{\ttfamily bestiary.sty}, {\ttfamily core.sty}, and {\ttfamily itdr.ist}}
 \def \subtitle {A \LaTeX~style manual for ``\game''}	% SUBTITLE variable
 \def \author {Vladimir Arabadzhi}	% AUTHOR variable
 \def \keywords {\title;Into the Dungeon;RPG;LaTeX}	% KEYWORDS variable
 \def \version {2024/05/20}	% VERSION variable
 \def \license {\href{https://creativecommons.org/licenses/by-sa/4.0/}{Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA 4.0)}}	% LICENSE variable
+\def \corelicense{\href{https://www.latex-project.org/lppl.txt}{LaTeX Project Public License 1.3c}}	% CORELICENSE variable
 
 % SPECIAL TO ITDR-CORE-GUIDE
 
