--- a/part0.tex
+++ b/part0.tex
@@ -24,22 +24,22 @@
 \begin{minipage}{\textwidth}
 \begin{lstlisting}
 \noindent
-\begin{minipage}{\textwidth}
-	\begin{center}\fnsize
-		``\title'' by \author\\is licensed under the \license.
-	\end{center}
-\end{minipage}
+\begin{minipage}{\textwidth}\begin{center}\fnsize
+	``\title'' and {\ttfamily bestiary.csv} by \author\\
+	are licensed under the \license.\\
+	\corefiles{} files are licensed under the \corelicense.
+\end{center}\end{minipage}
 \end{lstlisting}
 \end{minipage}
 
 \faHandPointDown
 
 \noindent
-\begin{minipage}{\textwidth}
-	\begin{center}\fnsize
-		``\title'' by \author\\is licensed under the \license.
-	\end{center}
-\end{minipage}
+\begin{minipage}{\textwidth}\begin{center}\fnsize
+	``\title'' and {\ttfamily bestiary.csv} by \author\\
+	are licensed under the \license.\\
+	\corefiles{} files are licensed under the \corelicense.
+\end{center}\end{minipage}
 
 \clearpage
 
